--- a/MSc2006H.html
+++ b/MSc2006H.html
@@ -65,10 +65,37 @@
                                 Although it evolved into making an interactive web app, I would love to use this opportunity to create AR/VR content. ">
                                 <span><b>Week 1: Intro</b> (2025.01.07)</span>
                             </li>
-                            <li class="option" data-content="<b>Week 2: TBD</b><br>To be updated">
-                                <span><b>Week 2: TBD</b> (2025.01.14)</span>
+                            <li class="option" data-content="<b>Week 2: Figma to Website</b>
+                                <br>  
+                                <br>
+                                Without coding from scratch, it is possible to build prototype in Figma 
+                                <br>
+                                and copy and paste the CSS code to VS.
+                                <br>
+                                <br>
+                                <b>* Figma Tips:</b>
+                                <br>
+                                Header and Footer – auto layout> fixed height Fill container for width
+                                <br>
+                                Main – height and width both apply fill container  
+                                                                               
+                                ">
+                                
+                                <span><b>Week 2: Figma to Website</b> (2025.01.14)</span>                            
+                            </li>
+
+                            <li class="option" data-content="<b>Week 3: TBD</b>
+                                <br>
+
+                                ">
+                                <span> <b>Week 3: TBD</b> (2025.01.21)</span>
+
                             </li>
                         </ul>
+
+                        <div id="Exercise1" style="display: none; text-align: left; margin-top: 20px; margin-left: 10px">
+                            <a href="msc2006h-ex1.html">Link to Exercise1</a>
+                        </div>
 
                     </div>
 
