--- a/MRP description.html
+++ b/MRP description.html
@@ -42,7 +42,7 @@
                     <div class="txt">
                         <h2>01</h2>
                         <p>
-                            <b>Interactive Training Tool Design for Physiotherapists</b>
+                            <b>Interactive Training Tool Design <br>for Physiotherapists</b>
                             <br>: Optimizing NMES Therapy in ICU Settings
                         </p>
                         <p id="section1-content"></p>
