--- a/MSc2006H.html
+++ b/MSc2006H.html
@@ -84,7 +84,7 @@
                                 <span><b>Week 2: Figma to Website</b> (2025.01.14)</span>                            
                             </li>
 
-                            <li class="option" data-content="<b>Week 3: Pre-Production Process</b>
+                            <li class="option" data-content="<b>Week 3: Pre-Production</b>
                                 <br>
                                 <br>
                                 <b>* Pre-production workflow</b>
@@ -96,14 +96,14 @@
                                 <br>Speaker/character, Dialogue/narration
                                 <br><i>Tools</i> – celtx (relatively widely used. Most of the studios are happy to work in google docs)
                                 <br>3.	Thumbnail: aspect ratio, motion notes
-                                <br>4.	Storyboard: arrows – transformations, rotations of Object state 
+                                <br>4.	Storyboard: arrows – transformations, rotations of Object state
                                 <br>/ Camera movement (pan, dolly, zooming, tracking, pedestal shot)  
                                 <br>5.	Animatic
                                 <br>6.	Production
 
 
                                 ">
-                                <span> <b>Week 3: Pre-Production Process</b> (2025.01.21)</span>
+                                <span> <b>Week 3: Pre-Production</b> (2025.01.21)</span>
 
                             </li>
                         </ul>
