--- a/MSc2006H.html
+++ b/MSc2006H.html
@@ -106,6 +106,35 @@
                                 <span> <b>Week 3: Pre-Production</b> (2025.01.21)</span>
 
                             </li>
+
+                            <li class="option" data-content="<b>Week 4: Pre-Production2</b>
+                                <br>
+                                <br>
+                                <b>* Storyboard Critique Takeaway</b>
+                                <br>
+                                1. Script and Action/Transition could be physically in a different space. 
+                                <br>
+                                <br>
+                                <b>* Resources</b>
+                                <br> Airtable, sword of symphony
+                                <br>
+                                <br>
+                                <b>*Typical pre-production workflow</b>
+                                <br>Treatment > Script > Concept art – show the style> 
+                                <br>Storyboard> Prototype> Production
+                                <br>
+                                <br>
+                                <b>*Non-linear vs. Linear Pre-production</b>
+                                <br>- Similarities: Both streams require a series of visuals that consider camera 
+                                <br>angles, lighting, and the main characters and plot to plan scenes and sequences.
+                                <br>- Differences: While linear media follows a narrative structure, mostly adhering
+                                <br> to chronological or logical order, non-linear media focuses on planning each scene 
+                                <br>from the user journey perspective.
+
+                                ">
+                                <span> <b>Week 4: Pre-Production2</b> (2025.01.28)</span>
+
+                            </li>
                         </ul>
 
                         <div id="Exercise1" style="display: none; text-align: left; margin-top: 20px; margin-left: 10px">
