--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="inner">
                     <div class="txt">
                         <h2>01</h2>
-                        <p><b>Course Log</b></p>
+                        <p><b>Course Log and Dev Diary</b></p>
                         <li>
                             <a href="MSc2006H.html" target="_blank" class="course-name" >MSC2006H Advanced Media</a>
                         </li>
@@ -88,7 +88,10 @@
                 <div class="inner">
                     <div class="txt">
                         <h2>04</h2>
-                        <p><b>Extra-Curricular Activity</b></p>
+                        <p><b>Self-Learning Journey</b></p>
+                        <li>
+                            <a href="https://www.notion.so/MSC-2011H-Special-Topic-My-Journey-of-Learning-Unity-195c85d31a7a805b8509dd002fd996c6" target="_blank" class="course-name" >MSC2011H Special Topic</a>
+                        </li>
                     </div> 
                     <figure>
                         <video src="vid/vid4.mp4" muted loop></video>
