--- a/MSc2006H.html
+++ b/MSc2006H.html
@@ -79,7 +79,7 @@
                                 Main – height and width both apply fill container  
                                 <br>
                                 <br>
-                                <a href='http://127.0.0.1:5500/msc2006h-ex1.html' target='_blank'>Link to exercise1</a>
+                                <a href='msc2006h-ex1.html' target='_blank'>Link to exercise1</a>
                                 ">
                                 <span><b>Week 2: Figma to Website</b> (2025.01.14)</span>                            
                             </li>
@@ -138,7 +138,7 @@
                             <li class="option" data-content="<b>Week 6: Javascript </b>
                                 <br>
                                 <br>
-                                <a href='http://127.0.0.1:5500/msc2006h-ex1.html' target='_blank'>Link to exercise2</a>
+                                <a href='#' target='_blank'>Link to exercise2</a>
                                 ">
                                 <span> <b>Week 6: Javascript</b> (2025.02.11)</span>
                             </li>
@@ -171,7 +171,7 @@
                             <li class="option" data-content="<b>Week 9: 3D Web Viewer</b>
                                 <br>
                                 <br>
-                                <a href='http://127.0.0.1:5500/msc2006h-ex3.html' target='_blank'>Link to exercise 3 - sketchfab</a>
+                                <a href='msc2006h-ex3.html' target='_blank'>Link to exercise 3 - sketchfab</a>
                                 <br><a href='#' target='_blank'>Link to exercise 3 - Michael</a>
                                 ">
                                 <span> <b>Week 9: 3D Web Viewer</b> (2025.03.11)</span>
