--- a/MSc2006H.html
+++ b/MSc2006H.html
@@ -138,7 +138,7 @@
                             <li class="option" data-content="<b>Week 6: Javascript </b>
                                 <br>
                                 <br>
-                                <a href='#' target='_blank'>Link to exercise2</a>
+                                <a href='#' target='_blank'>Link to exercise2(In Progress)</a>
                                 ">
                                 <span> <b>Week 6: Javascript</b> (2025.02.11)</span>
                             </li>
@@ -172,7 +172,7 @@
                                 <br>
                                 <br>
                                 <a href='msc2006h-ex3.html' target='_blank'>Link to exercise 3 - sketchfab</a>
-                                <br><a href='#' target='_blank'>Link to exercise 3 - Michael</a>
+                                <br><a href='#' target='_blank'>Link to exercise 3 - Michael (TBU soon)</a>
                                 ">
                                 <span> <b>Week 9: 3D Web Viewer</b> (2025.03.11)</span>
                             </li>
